[package]
name = "smart_led_effects"
version = "0.1.8"
edition = "2021"
authors = ["Philip Barlow"]
description = "A collection of effects for LED strips"
license = "MIT"
repository = "https://github.com/bitbrain-za/smart-led-effects-rs"
homepage = "https://github.com/bitbrain-za/smart-led-effects-rs"
readme = "README.md"
keywords = ["ws2812", "neopixel", "smart-leds"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = { version = "0.7.3", default-features = false, features = ["libm"] }
rand_core = { version = "0.9", default-features = false }
smart-leds-trait = { version = "0.2", default-features = false }

[dependencies.heapless]
version = "0.8"
optional = true
default-features = false

[dependencies.embassy-time]
version = "0.5"
optional = true
default-features = false

[features]
default = []
# Enable heap-allocating conveniences (Vec, Box) when desired
alloc = []
# std implies alloc and enables std-only demos/helpers
std = ["alloc", "palette/std"]
# Optional helper adapters
time-embassy = ["embassy-time"]
